// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Counter Renders 1`] = `
<div
  className="counter"
>
  <div
    className="count"
  >
    0
  </div>
  <button
    className="increment"
    onClick={[Function]}
  >
    ++
  </button>
  <button
    className="decrement"
    onClick={[Function]}
  >
    --
  </button>
</div>
`;

exports[`HelloWorld Renders 1`] = `
<div
  className="helloWorld"
>
  <div
    className="hello"
  >
    Hello 
    world
  </div>
  <div
    className="counter"
  >
    <div
      className="count"
    >
      0
    </div>
    <button
      className="increment"
      onClick={[Function]}
    >
      ++
    </button>
    <button
      className="decrement"
      onClick={[Function]}
    >
      --
    </button>
  </div>
</div>
`;
